--- a/extraction/vard/Makefile
+++ b/extraction/vard/Makefile
@@ -1,23 +1,22 @@
 PYTHON=python2.7
+
 OCAMLBUILD = ocamlbuild -lib str -lib unix -I lib -I ml -cflag -g
-OCAMLBUILDTEST = ocamlbuild -package oUnit -lib str -I ml -I test -cflag -g
+OCAMLBUILD_TEST = ocamlbuild -package oUnit -lib str -I ml -I test -cflag -g
+
 VARD = ml/VarDRaft.ml ml/VarDRaft.mli ml/VarDArrangement.ml ml/vard.ml ml/VarDOpts.ml ml/Util.ml ml/VarDSerialization.ml
-LIB = lib/Shim.ml
+VARD_TEST = test/TestCommon.ml test/VarDOptsTest.ml test/VarDSerializationTest.ml test/VarDTest.ml
+VERDI_LIB = lib/Shim.ml
 
 default: vard.native
 
-vard.native: $(VARD) $(LIB)
+vard.native: $(VARD) $(VERDI_LIB)
 	$(OCAMLBUILD) vard.native
 
-VarDOptsTest.native: ml/VarDOpts.ml test/VarDOptsTest.ml
-	$(OCAMLBUILDTEST) VarDOptsTest.native
+VarDTest.native: $(VARD) $(VARD_TEST)
+	$(OCAMLBUILD_TEST) VarDTest.native
 
-VarDSerializationTest.native: ml/Util.ml ml/VarDSerialization.ml test/VarDSerializationTest.ml
-	$(OCAMLBUILDTEST) VarDSerializationTest.native
-
-test-units: VarDOptsTest.native VarDSerializationTest.native
-	./VarDOptsTest.native
-	./VarDSerializationTest.native
+test-units: VarDTest.native
+	./VarDTest.native
 
 test-integration: vard.native test/integration.py
 	$(PYTHON) test/integration.py
@@ -26,7 +25,7 @@ test: test-units test-integration
 
 clean:
 	$(OCAMLBUILD) vard.native -clean
-	$(OCAMLBUILDTEST) VarDOptsTest.native -clean
+	$(OCAMLBUILD_TEST) VarDTest.native -clean
 
 clear-data:
 	./scripts/clear-vard.sh
