--- a/extraction/vard/Makefile
+++ b/extraction/vard/Makefile
@@ -1,18 +1,18 @@
 PYTHON=python2.7
 
 OCAMLBUILD = ocamlbuild -lib str -lib unix -I lib -I ml -cflag -g
-OCAMLBUILD_TEST = ocamlbuild -package oUnit -lib str -I ml -I test -cflag -g
+OCAMLBUILD_TEST = ocamlbuild -package oUnit -lib str -I lib -I ml -I test -cflag -g
 
-VARD = ml/VarDRaft.ml ml/VarDRaft.mli ml/VarDArrangement.ml ml/vard.ml ml/VarDOpts.ml ml/Util.ml ml/VarDSerialization.ml
-VARD_TEST = test/TestCommon.ml test/VarDOptsTest.ml test/VarDSerializationTest.ml test/VarDTest.ml
-VERDI_LIB = lib/Shim.ml
+VARD = ml/VarDRaft.ml ml/VarDRaft.mli ml/VarDArrangement.ml ml/vard.ml ml/VarDSerialization.ml
+VARD_TEST = test/TestCommon.ml test/OptsTest.ml test/VarDSerializationTest.ml test/VarDTest.ml
+LIB = lib/Shim.ml lib/Util.ml lib/Opts.ml
 
 default: vard.native
 
-vard.native: $(VARD) $(VERDI_LIB)
+vard.native: $(LIB) $(VARD)
 	$(OCAMLBUILD) vard.native
 
-VarDTest.native: $(VARD) $(VARD_TEST)
+VarDTest.native: $(LIB) $(VARD) $(VARD_TEST)
 	$(OCAMLBUILD_TEST) VarDTest.native
 
 test-units: VarDTest.native
