--- a/extraction/vard/Makefile
+++ b/extraction/vard/Makefile
@@ -3,16 +3,20 @@ PYTHON=python2.7
 OCAMLBUILD = ocamlbuild -lib str -lib unix -I lib -I ml -cflag -g
 OCAMLBUILD_TEST = ocamlbuild -package oUnit -lib str -I lib -I ml -I test -cflag -g
 
-VARD = ml/VarDRaft.ml ml/VarDRaft.mli ml/VarDArrangement.ml ml/vard.ml ml/VarDSerialization.ml
-VARD_TEST = test/TestCommon.ml test/OptsTest.ml test/VarDSerializationTest.ml test/VarDTest.ml
+VARDRAFT = ml/VarDRaft.ml ml/VarDRaft.mli
+VARD = ml/VarDArrangement.ml ml/vard.ml ml/VarDSerialization.ml
+VARD_TEST = test/OptsTest.ml test/TestCommon.ml test/VarDSerializationTest.ml test/VarDTest.ml
 LIB = lib/Shim.ml lib/Util.ml lib/Opts.ml
 
 default: vard.native
 
-vard.native: $(LIB) $(VARD)
+vard.native: $(LIB) $(VARD) $(VARDRAFT)
 	$(OCAMLBUILD) vard.native
 
-VarDTest.native: $(LIB) $(VARD) $(VARD_TEST)
+$(VARDRAFT):
+	make -C ../.. extraction/vard/$@
+
+VarDTest.native: $(LIB) $(VARD) $(VARDRAFT) $(VARD_TEST)
 	$(OCAMLBUILD_TEST) VarDTest.native
 
 test-units: VarDTest.native
