build vard using verdi-runtime, adjust configure script and coqproject.sh for OPAM use

--- a/extraction/vard/Makefile
+++ b/extraction/vard/Makefile
@@ -1,22 +1,21 @@
 PYTHON=python2.7
 
-OCAMLBUILD = ocamlbuild -lib str -lib unix -I lib -I ml -cflag -g
-OCAMLBUILD_TEST = ocamlbuild -package oUnit -lib str -I lib -I ml -I test -cflag -g
+OCAMLBUILD = ocamlbuild -package verdi-runtime -I ml -cflag -g
+OCAMLBUILD_TEST = $(OCAMLBUILD) -package oUnit -I test
 
 VARDRAFT = ml/VarDRaft.ml ml/VarDRaft.mli
 VARD = ml/VarDArrangement.ml ml/vard.ml ml/VarDSerialization.ml
 VARD_TEST = test/OptsTest.ml test/TestCommon.ml test/VarDSerializationTest.ml test/VarDTest.ml
-LIB = lib/Shim.ml lib/Util.ml lib/Opts.ml
 
 default: vard.native
 
-vard.native: $(LIB) $(VARD) $(VARDRAFT)
+vard.native: $(VARD) $(VARDRAFT)
 	$(OCAMLBUILD) vard.native
 
 $(VARDRAFT):
 	+$(MAKE) -C ../.. extraction/vard/$@
 
-VarDTest.native: $(LIB) $(VARD) $(VARDRAFT) $(VARD_TEST)
+VarDTest.native: $(VARD) $(VARDRAFT) $(VARD_TEST)
 	$(OCAMLBUILD_TEST) VarDTest.native
 
 test-units: VarDTest.native
