simplify .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,9 @@ env:
     - COQ_VERSION=8.6
     - SSREFLECT_VERSION=1.6.1
   matrix:
-    - MODE=build
-      TARGET=default
-    - MODE=build
-      TARGET=quick
-    - MODE=vard-test
-      TARGET=default
+    - MODE=build TARGET=default
+    - MODE=build TARGET=quick
+    - MODE=vard-test TARGET=default
 script: bash -ex .travis-ci.sh
 sudo: false
 notifications:
