--- a/vard.opam
+++ b/vard.opam
@@ -15,7 +15,7 @@ build: [
 build-test: [make "vard-test"]
 available: [ ocaml-version >= "4.02.3" ]
 depends: [
-  "coq" {((>= "8.5" & < "8.6~") | (>= "8.6" & < "8.7~"))}
+  "coq" {>= "8.6" & < "8.7~"}
   "verdi" {= "dev"}
   "StructTact" {= "dev"}
   "verdi-runtime" {= "dev"}
