--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
     - COQ_VERSION=8.6
   matrix:
     - MODE=build
-    - MODE=vard-test
+    - MODE=vard OPAMBUILDTEST=1
 script: bash -ex .travis-ci.sh
 sudo: false
 notifications:
