Add cheerios and verdi-cheerios as dependencies

--- a/verdi-raft.opam
+++ b/verdi-raft.opam
@@ -17,6 +17,8 @@ depends: [
   "coq" {>= "8.6" & < "8.7~"}
   "verdi" {= "dev"}
   "StructTact" {= "dev"}
+  "cheerios" {= "dev"}
+  "verdi-cheerios" {= "dev"}
 ]
 
 tags: [
