--- a/vard-serialized.opam
+++ b/vard-serialized.opam
@@ -22,6 +22,7 @@ depends: [
   "ounit" {test & >= "2.0.0"}
   "cheerios" {= "dev"}
   "verdi-cheerios" {= "dev"}
+  "cheerios-runtime" {= "dev"}
 ]
 
 authors: [
@@ -32,4 +33,5 @@ authors: [
   "Steve Anton <>"
   "Karl Palmskog <>"
   "Ryan Doenges <>"
+  "Justin Adsuara <>"
 ]
