Towards compiling vard-serialized

--- a/extraction/vard-serialized/Makefile
+++ b/extraction/vard-serialized/Makefile
@@ -1,6 +1,6 @@
 PYTHON=python2.7
 
-OCAMLBUILD = ocamlbuild -tag safe_string -package verdi-runtime -I ml -cflag -g
+OCAMLBUILD = ocamlbuild -tag safe_string -pkgs 'verdi-runtime cheerios-runtime' -I ml -cflag -g
 OCAMLBUILD_TEST = $(OCAMLBUILD) -package oUnit -I test
 
 VARDRAFTSERIALIZED = ml/VarDRaftSerialized.ml ml/VarDRaftSerialized.mli
