Heavily simplified debugRecv and debugSend for vard-serialized

--- a/extraction/vard-serialized/Makefile
+++ b/extraction/vard-serialized/Makefile
@@ -10,6 +10,7 @@ VARDSERIALIZED_TEST = test/OptsTest.ml test/VarDSerializedSerializationTest.ml t
 default: vardserialized.native
 
 vardserialized.native: $(VARDSERIALIZED) $(VARDRAFTSERIALIZED)
+	perl scripts/remove_module.pl ml/VarDRaftSerialized
 	$(OCAMLBUILD) vardserialized.native
 
 $(VARDRAFTSERIALIZED):
