add perl script, adjust compilation and tests

--- a/extraction/vard-serialized/Makefile
+++ b/extraction/vard-serialized/Makefile
@@ -1,7 +1,7 @@
 PYTHON=python2.7
 
 OCAMLBUILD = ocamlbuild -tag safe_string -pkgs 'verdi-runtime cheerios-runtime' -I ml -cflag -g
-OCAMLBUILD_TEST = $(OCAMLBUILD) -package oUnit -I test
+OCAMLBUILD_TEST := $(OCAMLBUILD) -package oUnit -I test
 
 VARDRAFTSERIALIZED = ml/VarDRaftSerialized.ml ml/VarDRaftSerialized.mli
 VARDSERIALIZED = ml/VarDSerializedArrangement.ml ml/vardserialized.ml ml/VarDSerializedSerialization.ml
@@ -9,14 +9,15 @@ VARDSERIALIZED_TEST = test/OptsTest.ml test/VarDSerializedSerializationTest.ml t
 
 default: vardserialized.native
 
-vardserialized.native: $(VARDSERIALIZED) $(VARDRAFTSERIALIZED)
+vardserialized.native: $(VARDSERIALIZED) $(VARDRAFTSERIALIZED) scripts/remove_module.pl
 	perl scripts/remove_module.pl ml/VarDRaftSerialized
 	$(OCAMLBUILD) vardserialized.native
 
 $(VARDRAFTSERIALIZED):
 	+$(MAKE) -C ../.. extraction/vard-serialized/$@
 
-VarDTest.native: $(VARDSERIALIZED) $(VARDRAFTSERIALIZED) $(VARDSERIALIZED_TEST)
+VarDSerializedTest.native: $(VARDSERIALIZED) $(VARDRAFTSERIALIZED) $(VARDSERIALIZED_TEST) scripts/remove_module.pl
+	perl scripts/remove_module.pl ml/VarDRaftSerialized
 	$(OCAMLBUILD_TEST) VarDSerializedTest.native
 
 test-units: VarDSerializedTest.native
@@ -28,7 +29,7 @@ test-integration: vardserialized.native test/integration.py
 test: test-units test-integration
 
 clean:
-	$(OCAMLBUILD) -clean
+	ocamlbuild -clean
 
 clear-data:
 	./scripts/clear-vard.sh
