--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
   matrix:
     - MODE=build COQ_VERSION=8.6.1
     - MODE=vard-serialized COQ_VERSION=8.6.1 OPAMBUILDTEST=1
+    - MODE=vard-serialized COQ_VERSION=8.6
 script: bash -ex .travis-ci.sh
 sudo: false
 notifications:
