--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ addons:
       - aspcud
 env:
   matrix:
+    - MODE=build COQ_VERSION=8.6
     - MODE=build COQ_VERSION=8.6.1
+    - MODE=vard COQ_VERSION=8.6.1 OPAMBUILDTEST=1
     - MODE=vard-serialized COQ_VERSION=8.6.1 OPAMBUILDTEST=1
-    - MODE=vard-serialized COQ_VERSION=8.6
 script: bash -ex .travis-ci.sh
 sudo: false
 notifications:
