update dependencies in opam files

--- a/vard.opam
+++ b/vard.opam
@@ -18,6 +18,7 @@ depends: [
   "verdi" {= "dev"}
   "StructTact" {= "dev"}
   "cheerios" {= "dev"}
+  "verdi-cheerios" {= "dev"}
   "verdi-runtime" {= "dev"}
   "ocamlbuild" {build}
   "ounit" {test & >= "2.0.0"}
