--- a/verdi-raft-checkproofs.opam
+++ b/verdi-raft-checkproofs.opam
@@ -15,6 +15,8 @@ depends: [
   "coq" {>= "8.6" & < "8.7~"}
   "verdi" {= "dev"}
   "StructTact" {= "dev"}
+  "cheerios" {= "dev"}
+  "verdi-cheerios" {= "dev"}
 ]
 
 authors: [
