--- a/vard-log.opam
+++ b/vard-log.opam
@@ -11,6 +11,7 @@ build: [
   [ "./configure" ]
   [ make "-j%{jobs}%" "vard-log" ]
 ]
+build-test: [make "vard-log-test"]
 available: [ ocaml-version >= "4.02.3" ]
 depends: [
   "coq" {>= "8.6" & < "8.7~"}
@@ -18,6 +19,7 @@ depends: [
   "StructTact" {= "dev"}
   "verdi-runtime" {= "dev"}
   "ocamlbuild" {build}
+  "ounit" {test & >= "2.0.0"}
   "cheerios" {= "dev"}
   "cheerios-runtime" {= "dev"}
 ]
