boilerplate for vard-serialized-log

--- a/extraction/vard-serialized-log/Makefile
+++ b/extraction/vard-serialized-log/Makefile
@@ -1,8 +1,10 @@
+PYTHON=python2.7
+
 OCAMLBUILD = ocamlbuild -tag safe_string -pkgs 'verdi-runtime cheerios-runtime' -I ml -cflag -g
 OCAMLBUILD_TEST := $(OCAMLBUILD) -package oUnit -I test
 
 VARDRAFTSERLOG = ml/VarDRaftSerializedLog.ml ml/VarDRaftSerializedLog.mli
-VARDSERLOG = ml/vardserlog.ml
+VARDSERLOG = ml/vardserlog.ml ml/DiskOpShim.ml ml/VarDSerializedLogSerialization.ml ml/VarDSerializedLogArrangement.ml
 
 default: vardserlog.native
 
@@ -12,9 +14,13 @@ vardserlog.native: $(VARDSERLOG) $(VARDRAFTSERLOG) scripts/remove_module.pl
 
 $(VARDRAFTSERLOG):
 	+$(MAKE) -C ../.. extraction/vard-serialized-log/$@
+
+test: vardserlog.native test/integration.py
+	$(PYTHON) test/integration.py
+
 clean:
 	ocamlbuild -clean
 
-.PHONY: default clean $(VARDRAFTSERLOG)
+.PHONY: default test clean $(VARDRAFTSERLOG)
 
 .NOTPARALLEL: $(VARDRAFTSERLOG)
