--- a/extraction/vard-log/Makefile
+++ b/extraction/vard-log/Makefile
@@ -4,7 +4,7 @@ OCAMLBUILD = ocamlbuild -tag safe_string -pkgs 'verdi-runtime cheerios-runtime' 
 OCAMLBUILD_TEST := $(OCAMLBUILD) -package oUnit -I test
 
 VARDRAFTLOG = ml/VarDRaftLog.ml ml/VarDRaftLog.mli
-VARDLOG = ml/vardlog.ml ml/DiskOpShim.ml ml/VarDLogSerialization.ml ml/VarDLogArrangement.ml
+VARDLOG = ml/vardlog.ml ml/VarDLogSerialization.ml ml/VarDLogArrangement.ml
 
 default: vardlog.native
 
