--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
 env:
   matrix:
     - MODE=build COQ_VERSION=8.6.1
+    - MODE=checkproofs COQ_VERSION=8.6.1
     - MODE=vard COQ_VERSION=8.6.1 OPAMBUILDTEST=1
     - MODE=vard-serialized COQ_VERSION=8.6.1 OPAMBUILDTEST=1
     - MODE=vard-log COQ_VERSION=8.6.1 OPAMBUILDTEST=1
