--- a/verdi-raft-checkproofs.opam
+++ b/verdi-raft-checkproofs.opam
@@ -9,6 +9,7 @@ license: "BSD"
 
 build: [
   [ "./configure" ]
+  [ make "quick" "-j%{jobs}%" ]
   [ make "checkproofs" "J=%{jobs}%" ]
 ]
 depends: [
