--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,15 @@ addons:
       - opam
       - aspcud
 env:
+  global:
+    - COQ_VERSION=8.6.1
   matrix:
-    - MODE=build COQ_VERSION=8.6.1
-    - MODE=checkproofs COQ_VERSION=8.6.1
-    - MODE=vard COQ_VERSION=8.6.1 OPAMBUILDTEST=1
-    - MODE=vard-serialized COQ_VERSION=8.6.1 OPAMBUILDTEST=1
-    - MODE=vard-log COQ_VERSION=8.6.1 OPAMBUILDTEST=1
-    - MODE=vard-serialized-log COQ_VERSION=8.6.1 OPAMBUILDTEST=1
+    - MODE=build
+    - MODE=proofalytics
+    - MODE=vard OPAMBUILDTEST=1
+    - MODE=vard-serialized OPAMBUILDTEST=1
+    - MODE=vard-log OPAMBUILDTEST=1
+    - MODE=vard-serialized-log OPAMBUILDTEST=1
 script: bash -ex .travis-ci.sh
 sudo: false
 notifications:
