--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: c
 cache:
-  apt: true
+  directories:
+  - $HOME/.opam
 addons:
   apt:
     sources:
@@ -13,9 +14,8 @@ addons:
 env:
   global:
     - COMPILER="4.02.3+32bit"
-  matrix:
-    - COQ_VERSION=8.6.1 MODE=build
-    - COQ_VERSION=8.7.0 MODE=build
+    - COQ_VERSION="8.7.0"
+    - MODE=build
 #before_install:
 #  - openssl aes-256-cbc -K $encrypted_130bc391cda8_key -iv $encrypted_130bc391cda8_iv -in .travis/travis_rsa.enc -out .travis/travis_rsa -d
 #  - cp .travis/travis_rsa ~/.ssh
