--- a/verdi-raft.opam
+++ b/verdi-raft.opam
@@ -11,8 +11,8 @@ build: [
   [ "./configure" ]
   [ make "-j%{jobs}%" ]
 ]
-install: [ make "install" ]
-remove: [ "sh" "-c" "rm -rf '%{lib}%/coq/user-contrib/VerdiRaft'" ]
+install: []
+remove: []
 depends: [
   "coq" {((>= "8.6.1" & < "8.7~") | (>= "8.7" & < "8.8~"))}
   "verdi" {= "dev"}
