--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
     - COQ_VERSION="8.7.0"
   matrix:
     - MODE=build
-    - MODE=vard
+    - MODE=vard OPAMBUILDTEST=1
 #before_install:
 #  - openssl aes-256-cbc -K $encrypted_130bc391cda8_key -iv $encrypted_130bc391cda8_iv -in .travis/travis_rsa.enc -out .travis/travis_rsa -d
 #  - cp .travis/travis_rsa ~/.ssh
