--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,26 @@
 language: c
+cache:
+  directories:
+  - $HOME/.opam
 addons:
   apt:
     sources:
       - avsm
     packages:
-      - ocaml
       - opam
       - aspcud
+      - gcc-multilib
+      - g++-multilib
 env:
+  global:
+    - COMPILER="4.05.0+32bit"
+    - COQ_VERSION="8.7.0"    
   matrix:
-    - COQ_VERSION=8.6.1 MODE=build
-    - COQ_VERSION=8.7.0 MODE=build
-    - COQ_VERSION=8.6.1 MODE=vard OPAMBUILDTEST=1
-    - COQ_VERSION=8.6.1 MODE=vard-serialized OPAMBUILDTEST=1
-    - COQ_VERSION=8.6.1 MODE=vard-log OPAMBUILDTEST=1
-    - COQ_VERSION=8.6.1 MODE=vard-serialized-log OPAMBUILDTEST=1
+    - MODE=build
+    - MODE=vard OPAMBUILDTEST=1
+    - MODE=vard-serialized OPAMBUILDTEST=1
+    - MODE=vard-log OPAMBUILDTEST=1
+    - MODE=vard-serialized-log OPAMBUILDTEST=1
 #before_install:
 #  - openssl aes-256-cbc -K $encrypted_130bc391cda8_key -iv $encrypted_130bc391cda8_iv -in .travis/travis_rsa.enc -out .travis/travis_rsa -d
 #  - cp .travis/travis_rsa ~/.ssh
