--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,61 @@
-language: c
-cache:
-  directories:
-  - $HOME/.opam
-addons:
-  apt:
-    sources:
-      - avsm
-    packages:
-      - opam
-      - aspcud
-      - gcc-multilib
-      - g++-multilib
+language: generic
+sudo: false
+
+services:
+  - docker
+
 env:
   global:
-    - COMPILER="4.05.0+32bit"
-    - COQ_VERSION="8.7.1"    
+    - THIS_REPO=verdi-raft
   matrix:
-    - MODE=build
-    - MODE=vard OPAMBUILDTEST=1
-    - MODE=vard-serialized OPAMBUILDTEST=1
-    - MODE=vard-log OPAMBUILDTEST=1
-    - MODE=vard-serialized-log OPAMBUILDTEST=1
-#before_install:
-#  - openssl aes-256-cbc -K $encrypted_130bc391cda8_key -iv $encrypted_130bc391cda8_iv -in .travis/travis_rsa.enc -out .travis/travis_rsa -d
-#  - cp .travis/travis_rsa ~/.ssh
-#  - chmod 600 ~/.ssh/travis_rsa
-#  - cp .travis/ssh_config ~/.ssh/config
-script: bash -ex .travis-ci.sh
-sudo: false
+    - MODE=build COQ_VERSION=coq8.6
+    - MODE=build COQ_VERSION=coq8.7
+    - MODE=vard OPAMBUILDTEST=1 COQ_VERSION=coq8.7
+    - MODE=vard-serialized OPAMBUILDTEST=1 COQ_VERSION=coq8.7
+    - MODE=vard-log OPAMBUILDTEST=1 COQ_VERSION=coq8.7
+    - MODE=vard-serialized-log OPAMBUILDTEST=1 COQ_VERSION=coq8.7
+
+before_script:
+- docker pull mdernst/xenial-for-verdi-$COQ_VERSION
+
+# Using travis_wait here seems to cause the job to terminate after 1 minute
+# with no error (!).
+# The fcntl line works around a bug where Travis truncates logs and fails.
+script:
+- python -c "import fcntl; fcntl.fcntl(1, fcntl.F_SETFL, 0)"
+- REMOTE_ORIGIN_URL=`git config --get remote.origin.url`
+- echo "THIS_REPO=${THIS_REPO}"
+- echo "COQ_VERSION=${COQ_VERSION}"
+- echo "MODE=${MODE}"
+- echo "OPAMBUILDTEST=${OPAMBUILDTEST}"
+- echo "TRAVIS_BRANCH=${TRAVIS_BRANCH}"
+- echo "REMOTE_ORIGIN_URL=${REMOTE_ORIGIN_URL}"
+- echo "TRAVIS_EVENT_TYPE=${TRAVIS_EVENT_TYPE}"
+- echo "TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST}"
+- echo "TRAVIS_PULL_REQUEST_BRANCH=${TRAVIS_PULL_REQUEST_BRANCH}"
+- echo "TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG}"
+- >-
+  docker run mdernst/xenial-for-verdi-$COQ_VERSION /bin/bash -c "true &&
+     if [ $TRAVIS_EVENT_TYPE = pull_request ] ; then
+       git clone --quiet --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO || git clone --quiet --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
+       cd $THIS_REPO
+       git fetch origin +refs/pull/$TRAVIS_PULL_REQUEST/merge
+       git checkout -qf FETCH_HEAD
+       git config user.email noone@cares.com
+       git config user.name Noone Cares
+       git remote add theupstream https://github.com/$TRAVIS_REPO_SLUG.git
+       git pull --depth 9 theupstream $TRAVIS_BRANCH || git pull --depth 9 theupstream $TRAVIS_BRANCH
+     else
+       git clone --quiet --depth 9 -b $TRAVIS_BRANCH $REMOTE_ORIGIN_URL $THIS_REPO || git clone --quiet --depth 9 -b $TRAVIS_BRANCH $REMOTE_ORIGIN_URL $THIS_REPO
+       cd $THIS_REPO
+     fi &&
+     export TRAVIS_REPO_SLUG=$TRAVIS_REPO_SLUG &&
+     export TRAVIS_BUILD_DIR=$TRAVIS_BUILD_DIR &&
+     ./.travis-ci.sh $MODE $OPAMBUILDTEST"
+
+git:
+  depth: 9
+
 notifications:
   slack:
     on_start: always
