use SHA of Travis merge commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ script:
          git clone --quiet --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO || git clone --quiet --depth 9 $REMOTE_ORIGIN_URL $THIS_REPO
          cd $THIS_REPO
          git fetch origin +refs/pull/$TRAVIS_PULL_REQUEST/merge
-         git checkout -qf $TRAVIS_COMMIT
+         git checkout -qf $TRAVIS_PULL_REQUEST_SHA
          git config user.email noone@cares.com
          git config user.name Noone Cares
          git remote add theupstream https://github.com/$TRAVIS_REPO_SLUG.git
