--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,11 @@ script:
          cd $THIS_REPO
          git checkout -qf $TRAVIS_COMMIT
        fi &&
+       openssl aes-256-cbc -K $encrypted_cd2d8c660bce_key -iv $encrypted_cd2d8c660bce_iv -in .travis/travis_rsa.enc -out .travis/travis_rsa -d &&
+       mkdir -p ~/.ssh &&
+       cp .travis/travis_rsa ~/.ssh &&
+       chmod 600 ~/.ssh/travis_rsa &&
+       cp .travis/ssh_config ~/.ssh/config &&
        ./.travis-ci.sh $MODE $OPAMBUILDTEST"
 
 git:
