--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     - MODE=vard-serialized OPAMBUILDTEST=1 COQ_VERSION=coq8.7
     - MODE=vard-log OPAMBUILDTEST=1 COQ_VERSION=coq8.7
     - MODE=vard-serialized-log OPAMBUILDTEST=1 COQ_VERSION=coq8.7
+    - MODE=proofalytics COQ_VERSION=coq8.7
 
 # The "docker run" command will pull if needed.
 # Running this first gives two tries in case of network lossage.
