--- a/vard-serialized-log.opam
+++ b/vard-serialized-log.opam
@@ -14,7 +14,7 @@ build: [
 build-test: [make "vard-serialized-log-test"]
 available: [ ocaml-version >= "4.02.3" ]
 depends: [
-  "coq" {((>= "8.6.1" & < "8.7~") | (>= "8.7" & < "8.8~"))}
+  "coq" {(>= "8.6.1" & < "8.7~") | (>= "8.7" & < "8.8~") | (>= "8.8" & < "8.9~")}
   "verdi" {= "dev"}
   "StructTact" {= "dev"}
   "verdi-runtime" {= "dev"}
