--- a/vard.opam
+++ b/vard.opam
@@ -11,10 +11,10 @@ build: [
   [ "./configure" ]
   [ make "-j%{jobs}%" "vard" ]
 ]
-build-test: [make "vard-test"]
+build-test: [ make "vard-test" ]
 available: [ ocaml-version >= "4.02.3" ]
 depends: [
-  "coq" {(>= "8.6.1" & < "8.7~") | (>= "8.7" & < "8.8~") | (>= "8.8" & < "8.9~")}
+  "coq" {>= "8.6.1" & < "8.9~"}
   "verdi" {= "dev"}
   "StructTact" {= "dev"}
   "cheerios" {= "dev"}
