--- a/verdi-raft-checkproofs.opam
+++ b/verdi-raft-checkproofs.opam
@@ -13,7 +13,7 @@ build: [
   [ make "checkproofs" "J=%{jobs}%" ]
 ]
 depends: [
-  "coq" {(>= "8.6.1" & < "8.7~") | (>= "8.7" & < "8.8~") | (>= "8.8" & < "8.9~")}
+  "coq" {>= "8.6.1" & < "8.9~"}
   "verdi" {= "dev"}
   "StructTact" {= "dev"}
   "cheerios" {= "dev"}
