--- a/vard.opam
+++ b/vard.opam
@@ -1,35 +1,35 @@
-opam-version: "1.2"
+opam-version: "2.0"
 version: "dev"
 maintainer: "palmskog@gmail.com"
 
 homepage: "https://github.com/uwplse/verdi-raft"
-dev-repo: "https://github.com/uwplse/verdi-raft.git"
+dev-repo: "git+https://github.com/uwplse/verdi-raft.git"
 bug-reports: "https://github.com/uwplse/verdi-raft/issues"
-license: "BSD"
+license: "BSD-2-Clause"
+synopsis: "Fault-tolerant distributed key-value store using a verified implementation of Raft consensus"
 
 build: [
   [ "./configure" ]
   [ make "-j%{jobs}%" "vard" ]
 ]
-build-test: [ make "vard-test" ]
-available: [ ocaml-version >= "4.02.3" ]
 depends: [
+  "ocaml" {>= "4.02.3"}
   "coq" {>= "8.7" & < "8.10~"}
-  "verdi" {= "dev"}
-  "StructTact" {= "dev"}
-  "cheerios" {= "dev"}
+  "coq-verdi" {= "dev"}
+  "coq-struct-tact" {= "dev"}
+  "coq-cheerios" {= "dev"}
   "verdi-runtime" {= "dev"}
   "ocamlbuild" {build}
-  "ounit" {test & >= "2.0.0"}
+  "ounit" {with-test & >= "2.0.0"}
 ]
 
 authors: [
-  "James Wilcox <>"
-  "Doug Woos <>"
-  "Pavel Panchekha <>"
-  "Zachary Tatlock <>"
-  "Steve Anton <>"
-  "Karl Palmskog <>"
-  "Ryan Doenges <>"
-  "Justin Adsuara <>"
+  "James R. Wilcox"
+  "Doug Woos"
+  "Pavel Panchekha"
+  "Zachary Tatlock"
+  "Steve Anton"
+  "Karl Palmskog"
+  "Ryan Doenges"
+  "Justin Adsuara"
 ]
