adjust opam and ci for 8.10

--- a/coq-verdi-raft.opam
+++ b/coq-verdi-raft.opam
@@ -11,16 +11,17 @@ description: """
 Raft is a distributed consensus algorithm that is designed to be easy to understand
 and is equivalent to Paxos in fault tolerance and performance. Verdi Raft is a
 verified implementation of Raft in Coq, constructed using the Verdi framework.
+Included is a verified fault-tolerant key-value store using Raft.
 """
 
 build: [
-  [ "./configure" ]
-  [ make "-j%{jobs}%" ]
+  ["./configure"]
+  [make "-j%{jobs}%"]
 ]
-install: [ make "install" ]
+install: [make "install"]
 depends: [
   "ocaml"
-  "coq" {(>= "8.7" & < "8.10~") | (= "dev")}
+  "coq" {(>= "8.7" & < "8.11~") | (= "dev")}
   "coq-verdi" {= "dev"}
   "coq-struct-tact" {= "dev"}
   "coq-cheerios" {= "dev"}
@@ -30,16 +31,18 @@ tags: [
   "category:Computer Science/Concurrent Systems and Protocols/Theory of concurrent systems"
   "keyword:program verification"
   "keyword:distributed algorithms"
+  "keyword:fault tolerance"
   "keyword:raft"
+  "keyword:key-value store"
   "logpath:VerdiRaft"
 ]
 authors: [
-  "James R. Wilcox"
-  "Doug Woos"
+  "Justin Adsuara"
+  "Steve Anton"
+  "Ryan Doenges"
+  "Karl Palmskog"
   "Pavel Panchekha"
   "Zachary Tatlock"
-  "Steve Anton"
-  "Karl Palmskog"
-  "Ryan Doenges"
-  "Justin Adsuara"
+  "James R. Wilcox"
+  "Doug Woos"
 ]
