--- a/vard-serialized.opam
+++ b/vard-serialized.opam
@@ -1,6 +1,6 @@
 opam-version: "2.0"
-version: "dev"
 maintainer: "palmskog@gmail.com"
+version: "dev"
 
 homepage: "https://github.com/uwplse/verdi-raft"
 dev-repo: "git+https://github.com/uwplse/verdi-raft.git"
@@ -8,13 +8,10 @@ bug-reports: "https://github.com/uwplse/verdi-raft/issues"
 license: "BSD-2-Clause"
 synopsis: "Fault-tolerant distributed key-value store using a verified implementation of Raft consensus"
 
-build: [
-  ["./configure"]
-  [make "-j%{jobs}%" "vard-serialized"]
-]
+build: [make "-j%{jobs}%" "vard-serialized"]
 depends: [
   "ocaml" {>= "4.05.0"}
-  "coq" {>= "8.7" & < "8.12~"}
+  "coq" {>= "8.14"}
   "coq-verdi" {= "dev"}
   "coq-struct-tact" {= "dev"}
   "coq-cheerios" {= "dev"}
